namespaces/live-1.cloud-platform.service.justice.gov.uk/opg-sirius-prototypes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opg-sirius-prototypes
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "OPG"
    cloud-platform.justice.gov.uk/slack-channel: "opg-sirius-develop"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Sirius LPA/Supervision: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/opg-sirius-prototypes"
    cloud-platform.justice.gov.uk/team-name: "opg"
    cloud-platform.justice.gov.uk/review-after: ""
